# speech_commands

./: .gitignore  CMakeLists.txt  Dockerfile  command.cpp  entrypoint.sh
models/: README.md
